<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutRegistracijaId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextMailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextUserReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/chose_your_avatar" />

        <ImageView
            android:id="@+id/imageViewLogoId"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="end"
            android:layout_margin="@dimen/tendp"
            android:layout_weight="1"
            android:contentDescription="@android:string/unknownName"
            android:scaleType="centerInside"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tendp"
        android:text="@string/remember_me" />

    <Button
        android:id="@+id/buttonReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/sign_up"
        android:textColor="@android:color/background_light" />

</LinearLayout>