<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutLoginId"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewLogoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:contentDescription="@android:string/unknownName"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/editTextLoginMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_login"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextLoginPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password_login"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/checkBoxLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/remeber_me" />

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/sign_in"
        android:textColor="@android:color/background_light" />


</LinearLayout>